--- a/index.html
+++ b/index.html
@@ -1,59 +1,81 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title></title>
-	<link rel="stylesheet" type="text/css" href="style2.css">
+<title>ANYON CLASS</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="style3.css">
 </head>
 <body>
-	<div class="wrap">
-		<div class="header">			
-			<h1>LEARN WEB PROGRAMING</h1>
 
-		</div>
-			<div class="menu">
-			<ul>
-				<div class="nav">
-					<li><a href="#">HOME</a></li>
-					<li><a href="#">Login</a></li>
-					<li><a href="#">Sign Up</a></li>
-				</div>
-				
+<div class="topnav">
+  <a class="logo"  href="#"><b>LOGO</b></a>
+   <a class="cname" href="#">Company Name</a>
+   <div class="nav1">
+  <a class="home" href="#"><b>HOME</b></a>
+  
+  <a href="#"><b>LOGIN</b></a>
+  <a href="#"><b>ABOUT</b></a>
+  <a href="#"><b>CONTACT US</b></a>
+</div>
+</div>
+  <div class="header">
+  <h1>ANYON CLASS</h1>
 
-			</ul>
-		</div>
-		<img src="PC2.png" alt="tes" width="100%" >
-		<!-- gambar acri Sendiri -->
-		<!-- <div class="badan">			
-			<div class="sidebar">
-				sidebar
-				<ul>
-					<li><a href="#">Tutorial HTML dasar</a></li>
-					<li><a href="#">Tutorial CSS dasar</a></li>
-					<li><a href="#">Tutorial PHP dasar</a></li>
-					<li><a href="#">Tutorial JQuery dasar</a></li>				
-				</ul>
-			</div> -->
+</div>
+<img src="PC5.png" alt="tes" width="100%" >
 
 
-			<div class="content">
-				<h2>TES</h2>
-				<p>
-				cari sendiri</p>
-			<br>
-			<h2>TES</h2>
-			<br>
-			<p>Cari Sendiri</p>
-			<br>
-			<h2>TES</h2>
-			<br>
-			<p>cari sendiri</p>
-			</div>
-		</div>
-		<div class="clear"></div>
-		<div class="footer">
-			footer
-		</div> 
-	</div>
 
+<div class="row">
+  <div class="column side">
+    <img src="book.png" alt=""> 
+    <h2>Any Course</h2>
+    <br>
+    <p>When you already log in here you can choose any course you want . in Here every course is available like Math, Science, Geographyc, web programming and many more.</p>
+  </div>
+  <div class="column middle">
+    <img src="game.png" alt="">
+    <h2>Game Tutorial</h2>
+    <br>
+    <p>Or Even game tutorial , to become pro gamer. Especially online game to make you have better play like Dota 2, Point Blank, League of Legends, Overwatch and other game  or even offline game.</p>
+  </div>
+  <div class="column side">
+    <img src="online.png" alt="">
+    <h2>Anywhere</h2>
+    <br>
+    <p>And Here We all Ready to give you course everytimes anytimes, anywhere, anycourse. Couse we have so much teacher that make us can online 24 hour a dayonline on our website. </p>
+  </div>
+
+  <div class="column side">
+      <img class="igalery" src="dota2.jpg" alt=""> 
+     </div>
+  <div class="column middle">
+     <img class="igalery" src="belajar.png" alt="">   
+  </div>
+  <div class="column side">
+      <img class="igalery" src="dcpp.png" alt="">
+    </div>
+<div class="content">
+  <div class="column">
+    <h3>Our Company IS ?</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, qui, sit. Maiores corporis expedita alias facere quia! Ratione reiciendis ipsum tempora quo! Quam voluptas ipsam assumenda non illo, necessitatibus ullam?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique dolore, possimus sint totam maiores autem tempore vel beatae. Aliquam adipisci dolore molestiae tempora totam vel nisi itaque. A, et, esse! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, totam quasi! Fugiat, officiis. Quam dolores consequatur animi quia hic dolor dolore, assumenda rem. Voluptatum ullam perferendis tenetur, ducimus corporis ea!</p>
+</div>
+</div>
+
+
+</div>
+<div class="footer">
+  <div class="sosmed">
+    <a href="facebook.com">
+  <img style="width: 42px; " src="facebook.png" alt="">
+</a>
+</div>
+  <p> ANYON Course bill pay services provided by Rizali Hafizhi  Inc. under applicable licenses. © 2018 Intuit, Inc. All rights reserved.</p>
+  <p>  Terms, conditions, features, availability, pricing, fees, service and support options subject to change without notice.
+  </p>
+</div>
+
+  
 </body>
 </html>
